deployments/local/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: b-g-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: b-g-backend
  template:
    metadata:
      labels:
        app: b-g-backend
    spec:
      containers:
        - name: b-g-backend
          image: b-g-backend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30001
  selector:
    app: b-g-backend
