deployments/local/db.yaml
# Service to expose MariaDB internally
apiVersion: v1
kind: Service
metadata:
  name: mariadb-service
  labels:
    app: b-g
    component: mariadb
spec:
  type: NodePort
  ports:
    - port: 3306
      targetPort: 3306
      nodePort: 30306
      protocol: TCP
  selector:
    app: b-g
    component: mariadb

---
# Deployment of MariaDB with environment setup and volume configuration
apiVersion: apps/v1
kind: Deployment
metadata:
  name: b-g-mariadb
  labels:
    app: b-g
    component: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: b-g
      component: mariadb
  template:
    metadata:
      labels:
        app: b-g
        component: mariadb
    spec:
      containers:
        - name: mariadb
          image: mariadb:11.4
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mariadb-pv
              mountPath: /var/lib/mysql
            - name: init-script
              mountPath: /docker-entrypoint-initdb.d/
      volumes:
        - name: mariadb-pv
          persistentVolumeClaim:
            claimName: mariadb-pv-claim
        - name: init-script
          configMap:
            name: mariadb-init
            defaultMode: 0777
