deployments/local/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: b-g-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: b-g-frontend
  template:
    metadata:
      labels:
        app: b-g-frontend
    spec:
      containers:
        - name: b-g-frontend
          image: b-g-frontend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30002
  selector:
    app: b-g-frontend
